--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
     omnis consequuntur quos tempora? Qui sapiente vero iure sit maxime sint ratione reprehenderit dolorum nostrum
     officiis expedita, cupiditate optio ut accusamus eaque, neque, veniam laborum eos mollitia assumenda!
     <h1>its h1</h1>
+    <img src="https://source.unsplash.com/random/1920*300" alt="not inserted">
+
 </body>
 
 </html>
