--- a/index.html
+++ b/index.html
@@ -8,17 +8,73 @@
     <title>Document</title>
 </head>
 
-<body>
-    Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente, quaerat culpa? Recusandae, ipsam asperiores quas
-    repellendus placeat ducimus magnam voluptatibus nisi fugiat error consequuntur iste aliquid mollitia veritatis
-    suscipit explicabo inventore ea consequatur omnis accusamus distinctio adipisci voluptate, enim repellat! Quibusdam
-    nisi voluptate cumque impedit explicabo neque architecto non sint, excepturi accusantium illo incidunt, facilis nemo
-    in ipsam. Asperiores obcaecati velit est dolorum. Voluptates quae facilis sit iste consectetur dolores error, nobis,
-    omnis consequuntur quos tempora? Qui sapiente vero iure sit maxime sint ratione reprehenderit dolorum nostrum
-    officiis expedita, cupiditate optio ut accusamus eaque, neque, veniam laborum eos mollitia assumenda!
-    <h1>its h1</h1>
-    <img src="https://source.unsplash.com/random/1920*300" alt="not inserted">
 
+<body style="padding-left: 10%" bgcolor="gray">
+
+
+    <title>My Bio</title>
+
+    <u>
+        <center>
+            <h3>Bio Page</h3>
+        </center>
+    </u>
+    <img src="https://source.unsplash.com/random/100*100" alt="N.B.Panzade" height="130" width="90" />
+    <h4>Name :<span> N.B.Panzade</h4></span>
+    <h3> </h3>
+    <form>Search : <input type="text"></form>
+    <h3> </h3>
+    <h3>My info : </h3>
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nisi ipsam, incidunt voluptas architecto eius <br>
+        necessitatibus labore laboriosam, earum rem non impedit atque dolor excepturi commodi. Sequi sit error <br>
+        nulla, dolorum praesentium quas <i>temporibus vero earum nihil explicabo fuga dolor ab hic iure cumque <br>
+            blanditiis qui provident ipsum sint quod iusto voluptatibus saepe.</i> Quod error quia quidem odio, est et
+        <br>
+        labore blanditiis maiores vel nesciunt hic quam fugiat distinctio. </p>
+    <h3>Qualification</h3>
+
+    <table border="2">
+        <thead>
+            <tr>
+                <center>
+                    <th>Institude</th>
+                    <th>Passout year</th>
+                    <th>Place</th>
+                    <th>Current place</th>
+                </center>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+
+                <td>
+                    <center>G.P.Khamgaon</center>
+                </td>
+                <td>
+                    <center>2025</center>
+                </td>
+                <td>
+                    <center>Khamgaon</center>
+                </td>
+                <td>
+                    <center> pune</center>
+                </td>
+
+            </tr>
+        </tbody>
+        <tfoot>
+            &copy;2023
+        </tfoot>
+    </table>
+    <h3> </h3>
+    <a href="https://www.indeed.com">click here</a><br>
+    <h3> </h3>
+    <button>Next Page</button>
+    <footer style="background-color: rgb(221, 216, 197);">
+        <center>7620195656</center>
+    </footer>
 </body>
+
+
 
 </html>
