--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
         nulla, dolorum praesentium quas <i>temporibus vero earum nihil explicabo fuga dolor ab hic iure cumque <br>
             blanditiis qui provident ipsum sint quod iusto voluptatibus saepe.</i> Quod error quia quidem odio, est et
         <br>
-        labore blanditiis maiores vel nesciunt hic quam fugiat distinctio. </p>
+        labore blanditiis maiores vel nesciunt hic quam fugiat distinctio.
+    </p>
     <h3>Qualification</h3>
 
     <table border="2">
@@ -70,7 +71,7 @@
     <a href="https://www.indeed.com">click here</a><br>
     <h3> </h3>
     <button>Next Page</button>
-    <footer style="background-color: rgb(221, 216, 197);">
+    <footer style="background-color: rgb(172, 163, 134);">
         <center>7620195656</center>
     </footer>
 </body>
