--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 
-<body style="padding-left: 10%" bgcolor="light-gray">
+<body style="padding-left: 10%" bgcolor="gray">
 
 
     <title>My Bio</title>
