--- a/index.html
+++ b/index.html
@@ -5,16 +5,48 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>gpkproject1</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="./css/style.css">
+
+
 </head>
 
 
-<body style="padding-left: 10%" bgcolor="gray">
 
-    <link rel="stylesheet" href="./css/style.css">
+<body>
+
+    <!--this is navigation-->
+    <header>
+        <nav class="container">
+            <!--logo-->
+            <h1 class="nav-logo"><span>nbp</span>projects</h1>
+            <!--link-->
+            <ul>
+                <li><a href="#"></a>Home</li>
+                <li><a href="#"></a>About</li>
+                <li><a href="#"></a>Skills</li>
+                <li><a href="#"></a>Education</li>
+                <li><a href="#"></a>Contact</li>
+            </ul>
+        </nav>
+
+    </header>
+    <!--Main section start-->
+    <main>
+
+
+    </main>
+    <!--footer start-->
+    <footer>
+
+
+    </footer>
+
+
 
 </body>
-
-
 
 </html>
