--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
             <h1 class="nav-logo"><span>nbp</span>projects</h1>
             <!--link-->
             <ul>
-                <li><a href="#"></a>Home</li>
-                <li><a href="#"></a>About</li>
-                <li><a href="#"></a>Skills</li>
-                <li><a href="#"></a>Education</li>
-                <li><a href="#"></a>Contact</li>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Skills</a></li>
+                <li><a href="#">Education</a></li>
+                <li><a href="#">Contact</a></li>
             </ul>
         </nav>
 
