--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
     <link rel="stylesheet" href="./css/style.css">
 
 
@@ -36,7 +37,33 @@
     </header>
     <!--Main section start-->
     <main>
-
+        <!--hero section-->
+        <section class="hero">
+            <div class="container">
+                <div calss="content">
+                    <h1>Hey there, I'am <span>Nitin Panzade</span></h1>
+                    <h2>I'am student</h2>
+                    <div class="btn-wrapper">
+                        <a class="btn btn-primary">
+                            About me
+                            <i class="bi bi-arrow-up-right-circle"></i></a>
+                        <a class="btn btn-secondary">
+                            Contect me
+                        </a>
+                    </div>
+                    <ul class="icon-wrapper">
+                        <li><a href="#"><i class="bi bi-instagram"></i></a></li>
+                        <li><a href="#"><i class="bi bi-facebook"></i></a></li>
+                        <li><a href="#"><i class="bi bi-twitter"></i></a></li>
+                        <li><a href="#"><i class="bi bi-linkedin"></i></a></li>
+                        <li><a href="#"><i class="bi bi-github"></i></a></li>
+                    </ul>
+                </div>
+                <div class="image">
+                    <img src="img.jpg" width="400" height="400" alt="Nitin">
+                </div>
+            </div>
+        </section>
 
     </main>
     <!--footer start-->
