--- a/index.html
+++ b/index.html
@@ -64,7 +64,27 @@
                 </div>
             </div>
         </section>
-
+        <section class="about">
+            <div class="container">
+                <!--image-->
+                <div class="image">
+                    <img src="img2.jpg" width="400" height="400" altr="nitin2">
+                </div>
+                <!--content-->
+                <div class="content">
+                    <h2 class="heading-2">About <span>me</span></h2>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Facere, nobis alias error veritatis,
+                        nesciunt quasi aliquam repellendus maiores pariatur fugit, suscipit molestiae. Quisquam, officia
+                        consequuntur. Suscipit porro sequi ratione natus ullam ipsum nulla, explicabo exercitationem
+                        atque
+                        quam nemo error asperiores repellat beatae officiis, non placeat excepturi? Ad itaque eius magni
+                        aut
+                        adipisci alias natus saepe recusandae omnis libero iste sed voluptatum hic quasi, facilis cum
+                        sunt
+                        ipsum modi ut cupiditate.</p>
+                </div>
+            </div>
+        </section>
     </main>
     <!--footer start-->
     <footer>
