--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <!--link-->
             <ul>
                 <li><a href="#">Home</a></li>
-                <li><a href="#">About</a></li>
+                <li><a href="#about">About</a></li>
                 <li><a href="#">Skills</a></li>
                 <li><a href="#">Education</a></li>
                 <li><a href="#">Contact</a></li>
@@ -64,11 +64,11 @@
                 </div>
             </div>
         </section>
-        <section class="about">
+        <section class="about" id="about">
             <div class="container">
                 <!--image-->
                 <div class="image">
-                    <img src="img2.jpg" width="400" height="400" altr="nitin2">
+                    <img src="img2.jpg" height="300" altr="nitin2">
                 </div>
                 <!--content-->
                 <div class="content">
@@ -82,6 +82,28 @@
                         adipisci alias natus saepe recusandae omnis libero iste sed voluptatum hic quasi, facilis cum
                         sunt
                         ipsum modi ut cupiditate.</p>
+                    <a class="">Download Resume</a>
+                </div>
+            </div>
+        </section>
+        <section class="skills" id="skills">
+            <div class="container">
+                <h2 class="heading-2">
+                    My <span>Skills</span>
+                </h2>
+                <div class="skills-wrapper">
+                    <span>HTML</span>
+                    <i class="bi bi-circle-fill"></i>
+                    <span>php</span>
+                    <i class="bi bi-circle-fill"></i>
+                    <span>Python</span>
+                    <i class="bi bi-circle-fill"></i>
+                    <span>Java</span>
+                    <i class="bi bi-circle-fill"></i>
+                    <span>C</span>
+                    <i class="bi bi-circle-fill"></i>
+                    <span>C++</span>
+                    <i class="bi bi-circle-fill"></i>
                 </div>
             </div>
         </section>
